--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
   DisplayStyleGuide: true
   Exclude:
     - 'tmp/**/*'
+    - 'vendor/**/*'
   ExtraDetails: true
   TargetRubyVersion: 2.3
 
