Add rubocop to default rake task for travisCI

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,3 +63,6 @@ Style/RegexpLiteral:
 # Use %w or %W for arrays of words.
 Style/WordArray:
   Enabled: false
+
+Style/SymbolArray:
+  Enabled: false
