--- a/docker/Dockerfile.pushmi_pullyu.development
+++ b/docker/Dockerfile.pushmi_pullyu.development
@@ -1,10 +1,14 @@
 # create pushmi_pullyu container from source
-
 FROM ruby:latest 
 
 RUN mkdir -p /gem/
 WORKDIR /gem/
 ADD . /gem/
 
+#CMD ["bundle", "install"] #assume new clone of GitHub
+
+#CMD "/bin/sh -c 'usr/local/bin/bundle install'; /bin/sh -c '/usr/local/bin/bundle exec pushmi_pullyu start';"
+
 ENTRYPOINT ["bundle", "exec"]
 CMD ["pushmi_pullyu", "start"]
+
