initial docker-compose files

--- a/docker/Dockerfile.pushmi_pullyu.production
+++ b/docker/Dockerfile.pushmi_pullyu.production
@@ -1,4 +1,4 @@
-# Create production pushmi_pullyu container from Gem 
+# Create production pushmi_pullyu container using Gem and dependancies from rubygem.org 
 FROM ruby:2.3.4
 
 # Grab gem from https://rubygems.org/gems/pushmi_pullyu 
