--- a/docker/docker-compose-production.yml
+++ b/docker/docker-compose-production.yml
@@ -1,2 +1,21 @@
 #Docker Compose for a production version of Pushmi-Pullyu
+version: '3'
 
+services:
+
+  hydranorth:
+    volumes:
+      # di_docker_hydranorth expects codebase in `app` within the container
+      - ${HYDRANORTH_SRC_HOME:-../../HydraNorth}:/app
+    environment:
+      # di_docker_hydranorth expects codebase path defined in `LOCAL_SRC_PATH` 
+      - LOCAL_SRC_PATH=${HYDRANORTH_SRC_HOME:-../../HydraNorth}
+
+  swift:
+    image: "ualibraries/swift_dev"
+
+  pushmi-pullyu:
+    image: "ualibraries/pushmi_pullyu:production"
+    depends_on:
+      - hydranorth
+      - swift
