Example config for token

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -15,6 +15,7 @@ piddir: tmp/pids
 process_name: pushmi_pullyu
 queue_name: dev:pmpy_queue
 minimum_age: 0
+rollbar_token: 'abc123xyz'
 
 redis:
   host: localhost
