--- a/docker/Dockerfile.pushmi_pullyu.development
+++ b/docker/Dockerfile.pushmi_pullyu.development
@@ -11,4 +11,4 @@ ADD lib/pushmi_pullyu/version.rb /app/lib/pushmi_pullyu/version.rb
 ADD . /app
 RUN bundle install
 
-CMD ["bash"]
+CMD ["bundle", "exec", "pushmi_pullyu", "start", "-C", "/app/docker/files/pushmi_pullyu_config_docker.yml"]
