--- a/docker/docker-compose-production.yml
+++ b/docker/docker-compose-production.yml
@@ -4,12 +4,12 @@ version: '3'
 services:
 
   hydranorth:
+    image: "ualibraries/hydra_north:deb"
+    env_file:
+      - .env-hydranorth
     volumes:
       # di_docker_hydranorth expects codebase in `app` within the container
-      - ${HYDRANORTH_SRC_HOME:-../../HydraNorth}:/app
-    environment:
-      # di_docker_hydranorth expects codebase path defined in `LOCAL_SRC_PATH` 
-      - LOCAL_SRC_PATH=${HYDRANORTH_SRC_HOME:-../../HydraNorth}
+      - ${LOCAL_SRC_PATH:-../../HydraNorth}:/app
 
   swift:
     image: "ualibraries/swift_dev"
@@ -17,5 +17,4 @@ services:
   pushmi-pullyu:
     image: "ualibraries/pushmi_pullyu:production"
     depends_on:
-      - hydranorth
       - swift
