--- a/docker/files/pushmi_pullyu_config_docker.yml
+++ b/docker/files/pushmi_pullyu_config_docker.yml
@@ -24,10 +24,10 @@ redis:
   port: 6379
 
 solr:
-  url: http://<%= ENV['SOLR_HOST'] %>:8983/solr/hydra-development
+  url: http://<%= ENV['SOLR_HOST'] %>:8983/solr/development
 
 fedora:
-  url: http://<%= ENV['FEDORA_HOST'] %>:8984/rest
+  url: http://<%= ENV['FEDORA_HOST'] %>:8983/rest
   user: fedoraAdmin
   password: fedoraAdmin
   base_path: /dev
