Docker README file tweaks

--- a/docker/.env-pushmi_pullyu
+++ b/docker/.env-pushmi_pullyu
@@ -12,7 +12,7 @@ REDIS_HOST=hydranorth
 SOLR_HOST=hydranorth
 
 FEDORA_HOST=hydranorth
-FEDORA_USER=
-FEDORA_PASS=
+FEDORA_USER=fedoraAdmin
+FEDORA_PASS=fedoraAdmin
 
 SWIFT_ENDPOINT=swift
