Redis URL workaround, README updates #25

--- a/docker/.env-pushmi_pullyu
+++ b/docker/.env-pushmi_pullyu
@@ -9,6 +9,10 @@
 
 REDIS_HOST=hydranorth
 
+# For rspec tests that default to localhost use to override
+# https://github.com/redis/redis-rb
+REDIS_URL=redis://hydranorth:6379
+
 SOLR_HOST=hydranorth
 
 FEDORA_HOST=hydranorth
