--- a/docker/.env-pushmi_pullyu_example
+++ b/docker/.env-pushmi_pullyu_example
@@ -1,4 +1,4 @@
-# Environment variables for the Pushmi Pullyu app - override properties in the 
+# Environment variables for the Pushmi Pullyu app - override properties in the config 
  
 # Usage:
 # Copy file to `.env-pushmi_pullyu`
@@ -8,6 +8,10 @@
 # with each other via hostnames.
 
 REDIS_HOST=hydranorth
+
+# For rspec tests that default to localhost use to override
+# https://github.com/redis/redis-rb
+REDIS_URL=redis://hydranorth:6379
 
 SOLR_HOST=hydranorth
 
