simplifications, fixes to make it work

--- a/docker/docker-compose-production.yml
+++ b/docker/docker-compose-production.yml
@@ -5,16 +5,20 @@ services:
 
   hydranorth:
     image: "ualibraries/hydra_north:deb"
-    env_file:
-      - .env-hydranorth
+    environment:
+      - LOCAL_SRC_PATH=$HOME/dev/HydraNorth
+      - EZID_PASSWORD=changeme
     volumes:
       # di_docker_hydranorth expects codebase in `app` within the container
-      - ${LOCAL_SRC_PATH:-../../HydraNorth}:/app
+      - ${LOCAL_SRC_PATH}:/app
 
   swift:
     image: "ualibraries/swift_dev"
+    environment:
+      - LOCAL_SWIFT_STORAGE=$HOME/.swift
 
   pushmi-pullyu:
     image: "ualibraries/pushmi_pullyu:production"
     depends_on:
       - swift
+      - hydranorth
