Add logging of preservation event to both application and preservation event logs (changed logfile flag to logdir so is more useful for both logs)

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -9,7 +9,7 @@
 # even put in dynamic logic, like consuming ENV Variables.
 
 debug: false
-logfile: log/pushmi_pullyu.log
+logdir: log
 monitor: false
 piddir: tmp/pids
 workdir: tmp/work
