Add integration acceptance test for testing PushmiPullyu preservation event from end to end

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -32,9 +32,9 @@ fedora:
   base_path: /dev
 
 swift:
-  auth_version: 2.0
-  tenant: Millennium Falcon
-  username: han
-  password: YT-1300
-  endpoint: https//corellia.lan
-  temp_url_key: 492727ZED
+  auth_version: v1.0
+  tenant: tester
+  username: test:tester
+  password: testing
+  endpoint: http://localhost:8080
+  container: ERA
