#89 Update redis config to accept URL instead of host/port as you may need further configuration like password for connecting to redis

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -19,8 +19,7 @@ minimum_age: 0
 rollbar_token: 'abc123xyz'
 
 redis:
-  host: localhost
-  port: 6379
+  url: redis://localhost:6379
 
 solr:
   url: http://localhost:8983/solr/development
