update rollbar config to allow it to use proxy

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -17,6 +17,7 @@ process_name: pushmi_pullyu
 queue_name: dev:pmpy_queue
 minimum_age: 0
 rollbar_token: 'abc123xyz'
+rollbar_endpoint: 'your_proxy_url'
 
 redis:
   url: redis://localhost:6379
