--- a/spec/support/http_cache/vcr/swift_new_deposit.yml
+++ b/spec/support/http_cache/vcr/swift_new_deposit.yml
@@ -196,7 +196,8 @@ http_interactions:
         process_name: test_pushmi_pullyu
         minimum_age: 10
         queue_name: test:pmpy_queue
-        rollbar_token: 'abc123xyz'
+        rollbar:
+          token: 'abc123xyz'
 
         redis:
           host: localhost
