Rubocop warns about a renamed namespace that affects the config file.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,7 +59,7 @@ Style/ClassAndModuleChildren:
 Style/Documentation:
   Enabled: false
 
-Style/FileName:
+Naming/FileName:
   Exclude:
     - Dangerfile
     - Rakefile
