Making PMPY defaults match the Jupiter defaults for fedora. Also: although mostly cosmetic, making the tests refer to 'test' rather than 'dev'.

--- a/spec/fixtures/config.yml
+++ b/spec/fixtures/config.yml
@@ -14,10 +14,11 @@ rollbar:
   proxy_port: '80'
 
 solr:
-  url: http://www.example.com:8983/solr/development
+  url: http://www.example.com:8983/solr/test
 
 fedora:
-  url: http://www.example.com:8983/fedora/rest
+  url: http://www.example.com:8080/fcrepo/rest
+  base_path: '/test'
 
 swift:
   auth_url: http://example.com:8080/auth/v1.0
