--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -24,7 +24,7 @@ solr:
   url: http://localhost:8983/solr/development
 
 fedora:
-  url: http://localhost:8983/fedora/rest
+  url: http://localhost:8080/fcrepo/rest
   user: fedoraAdmin
   password: fedoraAdmin
   base_path: /dev
