--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -29,6 +29,11 @@ fedora:
   password: fedoraAdmin
   base_path: /dev
 
+database:
+  url: postgresql://jupiter:mysecretpassword@127.0.0.1?pool=5
+  database: jupiter_development
+  pool: 5
+
 #parameters project_name and project_domain_name are required only for keystone v3 authentication
 swift:
   tenant: tester
