Add fallback for unset database URL (travis will need this).

--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -30,7 +30,8 @@ fedora:
   base_path: /dev
 
 database:
-  url: postgresql://jupiter:mysecretpassword@127.0.0.1?pool=5
+  encoding: utf8,
+  url: postgresql://jupiter:mysecretpassword@127.0.0.1
   database: jupiter_development
   pool: 5
 
