--- a/spec/support/http_cache/vcr/fedora_fetcher_owner.yml
+++ b/spec/support/http_cache/vcr/fedora_fetcher_owner.yml
@@ -48,10 +48,10 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |
-        @prefix ns003: <http://purl.org/dc/terms/> .
+        @prefix ns002: <http://purl.org/ontology/bibo/> .
 
         <http://www.example.com:8080/fcrepo/rest/dev/68/41/ce/ce/6841cece-41f1-4edf-ab9a-59459a127c77>
-               ns003:title                   "Meh";
+               ns002:owner                   2705 ;
     http_version: 
   recorded_at: Tue, 09 May 2017 19:50:49 GMT
 recorded_with: VCR 3.0.3
