--- a/spec/fixtures/config.yml
+++ b/spec/fixtures/config.yml
@@ -1,5 +1,6 @@
 # Dummy sample file for testing parsing of configuration file into PushmiPullyu
 
+aip_version: 'lightaip-2.0'
 debug: true
 logdir: tmp/spec/log
 monitor: false
@@ -12,9 +13,6 @@ rollbar:
   token: 'abc123xyz'
   proxy_host: 'your_proxy_url'
   proxy_port: '80'
-
-solr:
-  url: http://www.example.com:8983/solr/test
 
 fedora:
   url: http://www.example.com:8080/fcrepo/rest
