--- a/examples/pushmi_pullyu.yml
+++ b/examples/pushmi_pullyu.yml
@@ -28,10 +28,7 @@ fedora:
   base_path: /dev
 
 database:
-  encoding: utf8
-  url: postgresql://jupiter:mysecretpassword@127.0.0.1
-  database: jupiter_development
-  pool: 5
+  url: postgresql://jupiter:mysecretpassword@127.0.0.1/jupiter_development
 
 #parameters project_name and project_domain_name are required only for keystone v3 authentication
 swift:
