--- a/spec/fixtures/config.yml
+++ b/spec/fixtures/config.yml
@@ -19,4 +19,4 @@ fedora:
   base_path: '/test'
 
 swift:
-  auth_url: http://example.com:8080/auth/v1.0
+  auth_url: http://127.0.0.1:8080/auth/v1.0
