--- a/spec/fixtures/config.yml
+++ b/spec/fixtures/config.yml
@@ -13,6 +13,8 @@ rollbar:
   token: 'abc123xyz'
   proxy_host: 'your_proxy_url'
   proxy_port: '80'
-
 swift:
   auth_url: http://127.0.0.1:8080/auth/v1.0
+jupiter:
+  user: 'ditech@ualberta.ca'
+  password: 'correct horse battery staple'
