--- a/spec/fixtures/config.yml
+++ b/spec/fixtures/config.yml
@@ -17,4 +17,4 @@ swift:
   auth_url: http://127.0.0.1:8080/auth/v1.0
 jupiter:
   user: 'ditech@ualberta.ca'
-  password: 'correct horse battery staple'
+  api_key: '3eeb395e-63b7-11ea-bc55-0242ac130003'
